[package]
name = "rolling_hash_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.2", features = ["derive"] }
hmac-sha256 = "1.1.4"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
